in soreceive(), handle uios larger than 31 bits. fixes the remaining problem in PR 43240.